--- a/hiddenjailbreak/Makefile
+++ b/hiddenjailbreak/Makefile
@@ -1,6 +1,6 @@
-TARGET := iphone:clang:latest:7.0
+ARCHS = arm64
+TARGET := iphone:clang:latest:14.0
 INSTALL_TARGET_PROCESSES = SpringBoard
-
 
 include $(THEOS)/makefiles/common.mk
 
