--- a/hiddenjailbreak/Makefile
+++ b/hiddenjailbreak/Makefile
@@ -1,18 +1,21 @@
-ARCHS = arm64
-TARGET := iphone:clang:latest:14.0
-INSTALL_TARGET_PROCESSES = SpringBoard
+ARCHS := arm64 arm64e
+TARGET := iphone:14.4:14.0
 
 include $(THEOS)/makefiles/common.mk
 
 TWEAK_NAME = HiddenJailbreak
 
-HiddenJailbreak_FILES = Tweak.x
-HiddenJailbreak_CFLAGS = -fobjc-arc
+HiddenJailbreakCore= $(wildcard Core/*.m)
+
+$(TWEAK_NAME)_FILES = $(HiddenJailbreakCore) Tweak.x
+$(TWEAK_NAME)_EXTRA_FRAMEWORKS = Cephei
+$(TWEAK_NAME)_PRIVATE_FRAMEWORKS = AppSupport
+$(TWEAK_NAME)_CFLAGS = -fobjc-arc -DHiddenJailbreak="_$(shell git describe --always)"
 
 include $(THEOS_MAKE_PATH)/tweak.mk
 
-check:
-	@echo "Check Success."
+after-install::
+	install.exec "killall -9 SpringBoard"
+SUBPROJECTS += HiddenJailbreakPreferences
 
-distcheck:
-	@echo "Dist Check Success."
+include $(THEOS_MAKE_PATH)/aggregate.mk
