--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Access tweak folder
-      run: cd /hiddenjailbreak
+      run: ls -la
       
 #     - name: configure
 #       run: ./configure
