--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -15,19 +15,10 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Access tweak folder
-      run: ls -la
-      
-#     - name: configure
-#       run: ./configure
+      run: cd hiddenjailbreak
       
     - name: Install dependencies
       run: make
-    
-    - name: Run check
-      run: make check
       
-    - name: Run distcheck
-      run: make distcheck
-      
-    - name: Run build
-      run: make package
+#     - name: Run build
+#       run: make package
